@@ -74,43 +74,52 @@ struct _GnomeSelectorClientClass {
 };
 
 GtkType
-gnome_selector_client_get_type           (void) G_GNUC_CONST;
+gnome_selector_client_get_type              (void) G_GNUC_CONST;
 
 GnomeSelectorClient *
-gnome_selector_client_new                (GNOME_Selector       corba_selector,
-                                          Bonobo_UIContainer   uic);
+gnome_selector_client_new                   (const gchar         *moniker,
+                                             Bonobo_UIContainer   uic);
 
 GnomeSelectorClient *
-gnome_selector_client_construct          (GnomeSelectorClient *client,
-                                          GNOME_Selector       corba_selector,
-                                          Bonobo_UIContainer   uic);
+gnome_selector_client_new_from_objref       (GNOME_Selector       corba_selector,
+                                             Bonobo_UIContainer   uic);
+
+GnomeSelectorClient *
+gnome_selector_client_construct             (GnomeSelectorClient *client,
+                                             const gchar         *moniker,
+                                             Bonobo_UIContainer   uic);
+
+GnomeSelectorClient *
+gnome_selector_client_construct_from_objref (GnomeSelectorClient *client,
+                                             GNOME_Selector       corba_selector,
+                                             Bonobo_UIContainer   uic);
 
 /* Get/set the text in the entry widget. */
 gchar *
-gnome_selector_client_get_entry_text     (GnomeSelectorClient *client);
+gnome_selector_client_get_entry_text        (GnomeSelectorClient *client);
 
 void
-gnome_selector_client_set_entry_text     (GnomeSelectorClient *client,
-                                          const gchar         *text);
+gnome_selector_client_set_entry_text        (GnomeSelectorClient *client,
+                                             const gchar         *text);
 
 /* If the entry widget is derived from GtkEditable, then we can use this
  * function to send an "activate" signal to it. */
 void
-gnome_selector_client_activate_entry     (GnomeSelectorClient *client);
+gnome_selector_client_activate_entry        (GnomeSelectorClient *client);
 
 /* Get/set URI. */
 
 gchar *
-gnome_selector_client_get_uri            (GnomeSelectorClient *client);
+gnome_selector_client_get_uri               (GnomeSelectorClient *client);
 
 void
-gnome_selector_client_set_uri            (GnomeSelectorClient             *client,
-                                          GnomeSelectorClientAsyncHandle **handle_return,
-                                          const gchar                     *uri,
-                                          guint                            timeout_msec,
-                                          GnomeSelectorClientAsyncFunc     async_func,
-                                          gpointer                         user_data,
-					  GDestroyNotify                   destroy_fn);
+gnome_selector_client_set_uri               (GnomeSelectorClient             *client,
+                                             GnomeSelectorClientAsyncHandle **handle_return,
+                                             const gchar                     *uri,
+                                             guint                            timeout_msec,
+                                             GnomeSelectorClientAsyncFunc     async_func,
+                                             gpointer                         user_data,
+                                             GDestroyNotify                   destroy_fn);
 
 G_END_DECLS
 
