@@ -1,3 +1,11 @@
+2001-05-20  Martin Baulig  <baulig@suse.de>
+
+	* gnome-selector-client.h
+	(gnome_selector_client_new): Take a `const gchar *moniker'.
+	(gnome_selector_client_construct): Likewise.
+	(gnome_selector_client_new_from_objref): New function.
+	(gnome_selector_client_construct_from_objref): Likewise.
+
 2001-05-19  Martin Baulig  <baulig@suse.de>
 
 	* gnome-image-entry-component.[ch]: Moved to ../components.
